src/test/deca/context/valid/ContextAvecObjet/Visibility/publicInMethod.deca
// Description:
//    Test de la visibilité public dans une classe indépendante
//
// Resultats:
//    ok

class A {
    int x = -1;

    int getX(){
        return x;
    }
}

class B{
    A a = new A();
    int x;

    void setX(){
        x = a.x;
    }
}