src/test/deca/context/invalid/ContextAvecObjet/InstanceOf/VoidInstance.deca
// Description:
//   void instance of
//
// Resultats:
//    Erreur contextuelle ligne 12
//    void n'est pas une instance de classe
class A{
    void getX(){}
}
{
    A a = new A();
    boolean x = a.x instanceof A;
}
